--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Localization Assign 21W.789</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="start_gathering">Start Gathering</string>
+    <string name="stop_gathering">Stop Gathering</string>
+
 
 </resources>
